<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.fenchtose.nocropper.CropperView
            android:background="#ff282828"
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:nocropper__grid_opacity="0.8"
            app:nocropper__grid_thickness="0.8dp"
            app:nocropper__padding_color="@color/colorAccent"
            app:nocropper__grid_color="@color/colorAccent" />

        <ImageView
            android:id="@+id/snap_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:layout_gravity="left|bottom"
            android:background="@drawable/black_transp_circ_ripple"
            android:scaleType="center"
            android:src="@mipmap/ic_crop_free_white_24dp"/>

        <ImageView
            android:id="@+id/rotate_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/black_transp_circ_ripple"
            android:scaleType="center"
            android:src="@mipmap/ic_rotate_right_white_24dp"/>

    </FrameLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_frame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2">

        <Button
            android:id="@+id/image_button"
            android:background="@drawable/button_design"
            android:layout_width="150dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_img" />

        <Button
            android:id="@+id/crop_button"
            android:layout_margin="5dp"
            android:background="@drawable/button_design"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/crop" />

        <Button
            android:id="@+id/gesture_button"
            android:layout_margin="5dp"
            android:background="@drawable/button_design"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/toggle_g" />

        <Button
            android:id="@+id/replace_button"
            android:layout_margin="5dp"
            android:background="@drawable/button_design"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:text="@string/replace" />

    </GridLayout>

</RelativeLayout>