<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            android:text="@string/english_quote"
            android:textColor="@color/color_blue_500"
            android:textSize="18sp" />


        <Button
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:id="@+id/more_button_1"
            style="@style/click_button"
            android:text="@string/more" />
    </RelativeLayout>

    <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
        android:id="@+id/first_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:msrv_gravity="start"
        app:msrv_snap_count="3"
        android:layout_marginRight="0dp"

        />

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:id="@+id/horizontal_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/kor_quote"
            android:textColor="@color/color_blue_500"
            android:textSize="18sp" />


        <Button
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:id="@+id/more_button_2"
            style="@style/click_button"
            android:text="@string/more" />
    </RelativeLayout>



    <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
        android:id="@+id/second_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        app:msrv_gravity="center"
        app:msrv_snap_count="3" />







</LinearLayout>