<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:fitsSystemWindows="false"
    tools:context=".DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_container"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:contentScrim="@android:color/holo_blue_light"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image_text">
                <ImageView
                    android:id="@+id/detail_imgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:background="@drawable/collapsing_img"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/img_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:text="                                                                  "
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:layout_alignParentRight="true"
                   />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme"
                app:theme="@style/BackwardArrow" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical">


            <TextView

                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="TITLE"
                android:textSize="25dp"
                android:layout_marginTop="-7dp"

                android:layout_marginBottom="8dp"
                android:textColor="@color/black" />


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/layout_design"
                android:layout_marginBottom="15dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/translator_btn"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/translator_round" />

                    <Button


                        android:id="@+id/save_btn"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/save_round"
                       />

                    <Button

                        android:id="@+id/crop_button"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/crop_round"
                         />

                    <Button
                        android:id="@+id/share_btn"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/share_round"
                      />
                </TableRow>

                <TableRow
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/translate"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/crop" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/share" />
                </TableRow>

            </TableLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="LARGE_BANNER"
                android:layout_gravity="center"
                ads:adUnitId="ca-app-pub-5388865560722868/4167572501"
              >
            </com.google.android.gms.ads.AdView>



            <Button
                android:id="@+id/view_response"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/main_color"
                android:text="@string/view_response"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"></Button>

            <TextView
                android:id="@+id/copyright_txt"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Copyright : "/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
